// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test renders the component correctly. 1`] = `
[
  <div
    data-testid="count"
  >
    1
  </div>,
  <div
    data-testid="title"
  >
     
     
  </div>,
]
`;

exports[`Test renders the component correctly. 2`] = `
[
  <div
    data-testid="count"
  >
    2
  </div>,
  <div
    data-testid="title"
  >
     
    Text 2
     
  </div>,
]
`;
